<resources>
    <string name="app_name">GuateTur</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_register">Registrarse</string>
    <string name="splashString">Cargando Datos.....</string>
    <string name="registerName">Nombre</string>
    <string name="registerUser">Usuario</string>
</resources>
